# pkm

./: .dockerignore  .gitignore  Cargo.toml  README.md  TODO.md  bpftool.package.pekit.toml  cpupower-libs.package.pekit.toml  cpupower.package.pekit.toml  env.pekit.toml  freefall.package.pekit.toml  intel_pstate_tracer.package.pekit.toml  kernel-devel.package.pekit.toml  kvm.env.pekit.toml  libperf.package.pekit.toml  libthermal-devel.package.pekit.toml  libthermal-tools.package.pekit.toml  libthermal.package.pekit.toml  mm-tools.package.pekit.toml  pekit.toml  perf-devel.package.pekit.toml  perf.package.pekit.toml  pkm_kconfig  pkm_makefile  rv.package.pekit.toml  spi-utils.package.pekit.toml  thermal-engine.package.pekit.toml  tmon.package.pekit.toml  usbip-devel.package.pekit.toml  usbip.package.pekit.toml
crates/kacs-core/: Cargo.toml
crates/kacs-core/src/: access_check.rs  access_check_abi.rs  access_mask.rs  ace.rs  acl.rs  audit.rs  caap.rs  cap.rs  claims.rs  compat.rs  condition.rs  conditional.rs  dacl.rs  error.rs  evaluate_sd.rs  group.rs  guid.rs  inherit.rs  inheritance.rs  lib.rs  luid.rs  mask.rs  mic.rs  object_tree.rs  pip.rs  pkm_alloc.rs  pre_sacl.rs  privilege.rs  sacl.rs  sd.rs  security_descriptor.rs  session.rs  sid.rs  token.rs  token_spec.rs  well_known.rs
crates/kacs-core/tests/: access_check.rs  access_check_abi.rs  caap.rs  caap_cache.rs  callback_dacl.rs  claims.rs  conditions.rs  confinement.rs  cross_validation.rs  dacl.rs  evaluate_sd.rs  mic.rs  object_aces.rs  pip.rs  pre_sacl.rs  principal_self.rs  privilege_audit.rs  privileges.rs  restricted.rs  sacl.rs  sd.rs  sid.rs  slice105_registry_container_inheritance.rs  slice10_pre_sacl.rs  slice11_evaluate_sd.rs  slice12_caap.rs  slice13_access_check.rs  slice14_privilege_audit.rs  slice15_access_check_abi.rs  slice16_caap_cache.rs  slice1_access_mask.rs  slice1_acl.rs  slice1_dacl.rs  slice1_sd.rs  slice1_sid.rs  slice2_object_aces.rs  slice2_principal_self.rs  slice3_callback_dacl.rs  slice3_conditions.rs  slice4_restricted.rs  (+6 more)
crates/kacs-core/tests/common/: mod.rs
crates/lcs-core/: Cargo.toml  LICENSE
crates/lcs-core/src/: abi.rs  access.rs  audit.rs  backup.rs  casefold.rs  casefold_table.rs  config.rs  constants.rs  errno.rs  error.rs  fd.rs  hives.rs  identity.rs  ioctl.rs  key.rs  key_path.rs  layers.rs  lib.rs  maintenance.rs  metadata.rs  open.rs  output_buffer.rs  path.rs  poll.rs  query.rs  resolution.rs  resource.rs  rsi.rs  security.rs  sequence.rs  source.rs  string.rs  symlink.rs  transaction.rs  transaction_log.rs  value.rs  watch.rs
crates/lcs-core/tests/: api.rs  backup.rs  hive.rs  key.rs  layer.rs  path.rs  registry.rs  rsi.rs  security.rs  slice100_self_configuration_planner.rs  slice101_lcs_audit_event_vocabulary.rs  slice102_internal_self_watch_planning.rs  slice106_key_open_access_planning.rs  slice107_security_descriptor_ioctls.rs  slice108_audit_payload_schemas.rs  slice109_effective_value_watch_events.rs  slice111_source_restart_watch_effects.rs  slice113_transaction_bound_counter.rs  slice116_transaction_commit_retry.rs  slice118_transaction_counter_transitions.rs  slice122_syscall_path_c_string_validation.rs  slice123_sid_binary_comparison.rs  slice126_value_type_set.rs  slice127_value_security_boundary.rs  slice129_hive_source_transaction_scope.rs  slice131_symlink_creation_authority_gate.rs  slice139_default_hives_are_dynamic.rs  slice13_rsi_status.rs  slice140_key_guid_assignment.rs  slice142_key_name_component_rules.rs  slice143_symlink_open_resolution.rs  slice145_symlink_target_payload_routing.rs  slice147_symlink_depth_eloop.rs  slice148_key_lookup_casefold.rs  slice149_path_entry_source_dispatch.rs  slice14_ioctl_access_requirements.rs  slice151_key_create_dual_records.rs  slice153_hidden_path_entries.rs  slice155_value_write_source_dispatch.rs  slice157_blanket_tombstone_source_dispatch.rs  (+121 more)
crates/lcs-core/tests/api/: abi_reserved_zero_primitive.rs  ioctl_output_copy_plans.rs  output_buffer_erange_plan.rs  syscall_path_c_string_validation.rs
crates/lcs-core/tests/backup/: backup_blanket_tombstone_payload.rs  backup_header_payload.rs  backup_hidden_cross_layer_topology.rs  backup_hidden_section_placement.rs  backup_key_payload.rs  backup_layer_manifest_authority.rs  backup_layer_manifest_payload.rs  backup_layer_manifest_set.rs  backup_path_entry_payload.rs  backup_read_only_transaction_admission.rs  backup_restore_fd_mode.rs  backup_restore_key_set.rs  backup_restore_layer_precedence.rs  backup_restore_layer_records.rs  backup_restore_non_root_key_create.rs  backup_restore_non_root_key_timestamp.rs  backup_restore_root_write.rs  backup_restore_teardown_drop.rs  backup_restore_teardown_path_entries.rs  backup_restore_teardown_values.rs  backup_restore_topology.rs  backup_restore_transaction_gate.rs  (+4 more)
crates/libp-errno/: Cargo.toml
crates/libp-errno/src/: lib.rs
crates/libp-event/: Cargo.toml
crates/libp-event/src/: abi.rs  emit.rs  error.rs  event.rs  lib.rs  raw.rs  ring.rs
crates/libp-files/: Cargo.toml
crates/libp-files/src/: abi.rs  error.rs  lib.rs  open.rs  raw.rs
crates/libp-sd/: Cargo.toml
crates/libp-sd/src/: abi.rs  access_check.rs  build.rs  claims.rs  codec.rs  condition.rs  error.rs  inherit.rs  lib.rs  object_tree.rs  raw.rs  sd.rs  wellknown.rs
crates/libp-sys/: Cargo.toml
crates/libp-sys/src/: lib.rs
crates/libp-test/: Cargo.toml  Dockerfile
crates/libp-test/src/: event.rs  files.rs  main.rs  sd.rs  token.rs
crates/libp-token/: Cargo.toml
crates/libp-token/src/: abi.rs  error.rs  free.rs  lib.rs  query.rs  raw.rs  token.rs
crates/libp-wire/: Cargo.toml
crates/libp-wire/src/: error.rs  event.rs  lib.rs  sid.rs
crates/msgpack/: Cargo.toml
crates/msgpack/src/: lib.rs
crates/peios-uapi/: Cargo.toml
crates/peios-uapi/src/: access.rs  errno.rs  file.rs  kmes.rs  lib.rs  msgpack.rs  parse.rs  process.rs  sd.rs  sid.rs  sys.rs  syscall.rs  token.rs
fuzz/: Cargo.toml  generate_corpus.rs  run.sh
fuzz/fuzz_targets/: fuzz_ace.rs  fuzz_acl.rs  fuzz_conditional.rs  fuzz_sd.rs  fuzz_sid.rs  fuzz_token_spec.rs
(+380 files in other folders)
