[workspace]
resolver = "2"
members = [
    "crates/kacs-core",
    "crates/lcs-core",
    "uapi/rust",
]
# uapi/rust is the generated `peios-uapi` — the canonical Rust binding,
# mechanically mirrored from the C UAPI headers by gen.sh. It stays here,
# co-located with the headers. The hand-written userspace library that
# consumes it (libp-{errno,sys,wire,sd,token,files,event}, msgpack) lives in
# the sibling `libp-rs` repo, mirroring how libp-go consumes uapi/go.

# Shared package metadata. Members opt-in via `field.workspace = true`.
# Members with reasons to diverge (kacs-core stays on edition 2021 during
# the slow-track impl) override locally.
[workspace.package]
edition = "2024"
rust-version = "1.85"

# Shared dependency declarations. Members consume via
# `dep.workspace = true`. Inline deps in members are still allowed when
# the member has a version reason that diverges from the workspace pin.
[workspace.dependencies]
thiserror = { version = "2", default-features = false }
