[workspace]
resolver = "2"
members = [
    "crates/kacs-core",
    "crates/lcs-core",
    "uapi/generated/rust",
]
# uapi/generated/rust is the generated `peios-uapi` crate — the canonical Rust
# binding, mechanically mirrored from the C UAPI headers (uapi/pkm) by its
# gen.sh and kept in sync by the codegen-drift gate. Never hand-edit it. The
# former libp-rs/libp-go consumers are retired (to be replaced by clients with
# direct libpeios.so dependencies).

# Shared package metadata. Members opt-in via `field.workspace = true`.
# Members with reasons to diverge (kacs-core stays on edition 2021 during
# the slow-track impl) override locally.
[workspace.package]
edition = "2024"
rust-version = "1.85"

# Shared dependency declarations. Members consume via
# `dep.workspace = true`. Inline deps in members are still allowed when
# the member has a version reason that diverges from the workspace pin.
[workspace.dependencies]
thiserror = { version = "2", default-features = false }
