[package]
name = "kacs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kacs-core = { path = "../crates/kacs-core" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_sid"
path = "fuzz_targets/fuzz_sid.rs"
doc = false

[[bin]]
name = "fuzz_ace"
path = "fuzz_targets/fuzz_ace.rs"
doc = false

[[bin]]
name = "fuzz_acl"
path = "fuzz_targets/fuzz_acl.rs"
doc = false

[[bin]]
name = "fuzz_sd"
path = "fuzz_targets/fuzz_sd.rs"
doc = false

[[bin]]
name = "fuzz_token_spec"
path = "fuzz_targets/fuzz_token_spec.rs"
doc = false

[[bin]]
name = "fuzz_conditional"
path = "fuzz_targets/fuzz_conditional.rs"
doc = false
