[package]
name = "kacs-core"
version = "0.1.0"
# Stays on edition 2021 explicitly during the Codex slow-track impl —
# don't disturb in-flight work. Migrate when there's a quiet window.
edition = "2021"
license = "MIT"
description = "Fresh slow-track KACS semantic core scaffold"

[features]
default = []
kernel = []

[dependencies]
# Generated mirror of the PKM UAPI constants — the single source of truth for
# ABI values. In the kernel build the cores instead resolve `peios_uapi::` to a
# vendored module (see kernel/stage-rust-core.sh), so this dep serves the
# standalone cargo build/test only.
peios-uapi = { path = "../../uapi/generated/rust", default-features = false }
