[package]
name = "lcs-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "GPL-2.0"
publish = false
description = "Slow-track LCS semantic core primitives"

[features]
default = []
kernel = ["kacs-core/kernel"]

[dependencies]
kacs-core = { path = "../kacs-core", default-features = false }
