[package]
name = "lcs-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false
description = "Slow-track LCS semantic core primitives"

[features]
default = []
kernel = ["kacs-core/kernel"]

[dependencies]
kacs-core = { path = "../kacs-core", default-features = false }
# Generated mirror of the PKM UAPI constants — the single source of truth for
# ABI values. In the kernel build the cores instead resolve `peios_uapi::` to a
# vendored module (see kernel/stage-rust-core.sh), so this dep serves the
# standalone cargo build/test only.
peios-uapi = { path = "../../uapi/generated/rust", default-features = false }
