[package]
name = "libp-event"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false
description = "Safe Rust wrappers for the Peios KMES event stream (emit + ring-buffer consumer)"

[lib]
name = "libp_event"
path = "src/lib.rs"

[features]
default = ["std"]
# Enables std-only conveniences: `From<Error> for std::io::Error`.
std = ["peios-uapi/std"]

[dependencies]
peios-uapi = { package = "peios-uapi-legacy", path = "../peios-uapi", default-features = false }
thiserror = { workspace = true }
