[package]
name = "libp-files"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false
description = "Safe Rust wrappers for the Peios KACS native file open API"

[lib]
name = "libp_files"
path = "src/lib.rs"

[features]
default = ["std"]
# Enables std-only conveniences: `FileHandle::as_fd()`,
# `From<Error> for std::io::Error`.
std = ["peios-uapi/std"]

[dependencies]
peios-uapi = { workspace = true }
thiserror = { workspace = true }
