[package]
name = "libp-sd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false
description = "Security Descriptor construction + KACS get_sd/set_sd wrappers for Peios"

[lib]
name = "libp_sd"
path = "src/lib.rs"

[features]
default = ["std"]
# Enables std-only conveniences (`From<Error> for std::io::Error`).
# `alloc` is always required (builders allocate wire buffers).
std = ["libp-errno/std", "libp-wire/std"]

[dependencies]
peios-uapi = { workspace = true }
libp-errno = { workspace = true }
libp-sys = { workspace = true }
libp-wire = { workspace = true }
thiserror = { workspace = true }
