[package]
name = "libp-sys"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false
description = "Direct (libc-free) kernel syscall mechanism and EINTR-retry for libp-rs"

[lib]
name = "libp_sys"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["libp-errno/std"]

[dependencies]
libp-errno = { workspace = true }
