[package]
name = "libp-token"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false
description = "Safe Rust wrappers for the Peios KACS token API"

[lib]
name = "libp_token"
path = "src/lib.rs"

[features]
default = ["std"]
# Enables std-only conveniences: `Token::as_fd() -> BorrowedFd<'_>`,
# `From<Error> for std::io::Error`, etc. Disable for libc-free targets.
# `alloc` is always required (query buffers, error contexts).
std = ["peios-uapi/std"]

[dependencies]
peios-uapi = { package = "peios-uapi-legacy", path = "../peios-uapi", default-features = false }
thiserror = { workspace = true }
