[package]
name = "libp-wire"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false
description = "Peios on-wire primitives for libp-rs: SID, KMES event header, shared ParseError"

[lib]
name = "libp_wire"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["peios-uapi/std"]

[dependencies]
peios-uapi = { workspace = true }
