[package]
name = "peios-uapi-legacy"
version = "0.19.8"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false
description = "Rust bindings for the Peios userspace kernel ABI (KACS, KMES, LCS)"

# Lives in the kernel repo (pkm-new) deliberately: every constant in this
# crate is a translation of a UAPI header (kacs/token_fd.h, kmes/kmes.h,
# etc.). Keeping the bindings next to their source of truth removes any
# possibility of drift -- the same PR that adds a syscall or constant in C
# bumps the Rust shadow.
#
# no_std + alloc by default; the `std` feature (default) enables
# `From<Errno> for std::io::Error` and other std-only conveniences.

[lib]
name = "peios_uapi_legacy"
path = "src/lib.rs"

[features]
default = ["std"]
# Enables std-only conveniences: `From<Errno> for std::io::Error`,
# `Value::render` (which uses `println!`), and similar. Disable for
# libc-free targets (recovery shells, future Tier 3, embedded contexts).
# The `alloc` crate is always required — every parser allocates.
std = []
